libs/logging_server.h

/**
** @brief Must be called when a user didn't existed in save and was created
** @param user_uuid The id of the user that was created
** @param user_name The name of the user that was created
**
** Commands:
** /login "user_name"
**/
int server_event_user_created(char const *user_uuid, char const *user_name);
/**
** @brief Must be called when a user was loaded from the save file
** Should be called at the start of the server once per user loaded
** It should display all users that were saved
** @param user_uuid The id of the saved user
** @param user_name The name of the saved user
**
** Commands:
** None, should be used at server start
**/
int server_event_user_loaded(char const *user_uuid, char const *user_name);
/**
** @brief Must be called when a user logged in
** @param user_uuid The id of the user that logged in
**
** Commands:
** /login
**/
int server_event_user_logged_in(char const *user_uuid);
/**
** @brief Must be called when a user logged out
** @param user_uuid The id of the user that logged out
**
** Commands:
** /logout
** When a user lost connexion to the server
**/
int server_event_user_logged_out(char const *user_uuid);
/**
** @brief Must be called when a private message was sent between users
** @param sender_uuid The id of the user that sent the message
** @param receiver_uuid The if of the user that receive the message
** @param message_body The message body
**
** Commands:
** /send "user_uuid" "message_body"
**/
int server_event_private_message_sended(
    char const *sender_uuid,
    char const *receiver_uuid,
    char const *message_body);