libs/src/bindings.rs

unsafe extern "C" {
    #[doc = " @brief Must be called when a user didn't existed in save and was created\n @param user_uuid The id of the user that was created\n @param user_name The name of the user that was created\n\n Commands:\n /login \"user_name\""]
    pub fn server_event_user_created(
        user_uuid: *const ::std::os::raw::c_char,
        user_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user was loaded from the save file\n Should be called at the start of the server once per user loaded\n It should display all users that were saved\n @param user_uuid The id of the saved user\n @param user_name The name of the saved user\n\n Commands:\n None, should be used at server start"]
    pub fn server_event_user_loaded(
        user_uuid: *const ::std::os::raw::c_char,
        user_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user logged in\n @param user_uuid The id of the user that logged in\n\n Commands:\n /login"]
    pub fn server_event_user_logged_in(
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user logged out\n @param user_uuid The id of the user that logged out\n\n Commands:\n /logout\n When a user lost connexion to the server"]
    pub fn server_event_user_logged_out(
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a private message was sent between users\n @param sender_uuid The id of the user that sent the message\n @param receiver_uuid The if of the user that receive the message\n @param message_body The message body\n\n Commands:\n /send \"user_uuid\" \"message_body\""]
    pub fn server_event_private_message_sended(
        sender_uuid: *const ::std::os::raw::c_char,
        receiver_uuid: *const ::std::os::raw::c_char,
        message_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __locale_data {
    pub _address: u8,
}
